bpo-30858: Improve error location for expressions with assignments